npr/darkhttpd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: darkhttpd
spec:
  template:
    spec:
      containers:
        - name: darkhttpd
          image: p3terx/darkhttpd:1.16
          args:
            - /srv/darkhttpd
            - --no-server-id
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 128Mi
          volumeMounts:
            - name: webroot
              mountPath: /srv/darkhttpd
              readOnly: true
      volumes:
        - name: webroot
          hostPath:
            path: /srv/darkhttpd
            type: DirectoryOrCreate
