npr/darkhttpd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: darkhttpd
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
