npr/darkhttpd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: darkhttpd
spec:
  ingressClassName: nginx
  rules:
    - host: file.zasda.id
      http:
        paths:
          - backend:
              service:
                name: darkhttpd
                port:
                  number: 80
            path: /
            pathType: Prefix
